# chisel

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: config.rs  crc32_window.rs  extraction.rs  gex.rs  lib.rs  main.rs  pipeline.rs  structural.rs  test_support.rs  types.rs  utils.rs
src/heuristics/: deinterleave.rs  deinterleave_split.rs  exact_crc.rs  mod.rs  sliding_window.rs
