[package]
name = "chisel"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crc32fast = "1.5"
nohash-hasher = "0.2.0"
quick-xml = "0.39.2"
smallvec = "1.15"
sha1_smol = { version = "1.0", features = ["std"] }
flate2 = "1"
lzma-rs = "0.3"
zip = { version = "8", default-features = false, features = ["deflate"] }
zstd = "0.13"
