[package]
name = "chisel-extract"
version = "1.0.1"
edition = "2024"
description = "Find and extract known data fragments from arbitrary binary files — using only checksums, sizes, and structural metadata"
license = "MIT"
repository = "https://github.com/pathawks/chisel"

[lib]
name = "chisel"

[[bin]]
name = "chisel"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
crc32fast = "1.5"
nohash-hasher = "0.2.0"
quick-xml = "0.39.2"
smallvec = "1.15"
flate2 = "1"
lzma-rs = "0.3"
zip = { version = "8", default-features = false, features = ["aes-crypto", "deflate-flate2"] }
sha1 = "0.10"
zstd = "0.13"

